wip: adding support for multiple loaded secrets

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 <p><button id="encrypt">Encrypt sample text (with stored secret)</button></p>
 <p><button id="decrypt">Decrypt sample text</button></p>
 
-<p><span id="authState" class="muted">(secret: not loaded)</span></p>
+<p><span id="authState" class="muted">(secret not loaded)</span></p>
 
 <div class="inputs">
   <p>
@@ -60,7 +60,7 @@
   function randBytes(n) { const a = new Uint8Array(n); crypto.getRandomValues(a); return a; }
 
   // let credentialIdB64 = localStorage.getItem('credIdB64') || null;
-  let secretB64 = null; // loaded from largeBlob on authenticate
+  let secretsB64 = {}; // loaded from largeBlob on authenticate
 
   // ---- WebAuthn helpers
   const rp = { id: location.hostname, name: "Demo RP" };
@@ -121,8 +121,8 @@
       if (assertion.getClientExtensionResults().largeBlob.written) {
         // keep a copy of the plaintext secret OUTSIDE only for demo encryption now;
         // in a real app, you could also encrypt data right after create() and store ciphertext server-side.
-        secretB64 = b64(secret);
-        $("#authState").textContent = "secret: loaded (from registration)";
+        secretsB64[assertion.id] = b64(secret);
+        $("#authState").textContent = "" + (Object.keys(secretsB64).length) + " secret(s): loaded (last from registration)";
         $("#authState").className = "ok";
         log("🔐 Secret (32B) written to largeBlob.");
       } else {
@@ -154,8 +154,8 @@
       const assertion = await navigator.credentials.get({ publicKey });
       const clientExt = assertion.getClientExtensionResults();
       if (clientExt && clientExt.largeBlob && clientExt.largeBlob.blob) {
-        secretB64 = b64(clientExt.largeBlob.blob); // ArrayBuffer -> b64
-        $("#authState").textContent = "secret: loaded (from authentication)";
+        secretsB64[assertion.id] = b64(clientExt.largeBlob.blob); // ArrayBuffer -> b64
+        $("#authState").textContent = "" + (Object.keys(secretsB64).length) + " secret(s): loaded (last from authentication)";
         $("#authState").className = "ok";
         log("✅ Authenticated. Read secret from largeBlob (" + (clientExt.largeBlob.blob.byteLength) + " bytes).");
       } else {
@@ -167,11 +167,12 @@
   // ---- Fake: generate random secret (not stored anywhere)
   async function doFake() {
     const secret = randBytes(32); // store this in largeBlob
+    const secretId = randBytes(8); // store this in largeBlob
 
-    secretB64 = b64(secret); // ArrayBuffer -> b64
-    $("#authState").textContent = "secret: loaded (fake)";
+    secretsB64[b64(secretId)] = b64(secret); // ArrayBuffer -> b64
+    $("#authState").textContent = "" + (Object.keys(secretsB64).length) + " secret(s): loaded (last fake)";
     $("#authState").className = "ok";
-    log("✅ Faked secret (" + (secret.byteLength) + " bytes) " + secretB64);
+    log("✅ Faked secret (" + (secret.byteLength) + " bytes) " + secretsB64[b64(secretId)]);
   }
 
   /* ===== Key derivation (HKDF-SHA256) from largeBlob secret ===== */
@@ -220,17 +221,9 @@
     return { salt, iv, name, bodyOffset };
   }
 
-  // ---- WebCrypto AES-GCM using the secret as raw key
-  async function importKeyFromSecretB64() {
-    if (!secretB64) throw new Error("No secret loaded. Authenticate first.");
-    const key = await crypto.subtle.importKey(
-      "raw", ubuf(secretB64), { name: "AES-GCM" }, false, ["encrypt", "decrypt"]
-    );
-    return key;
-  }
-
-  $('#encrypt').onclick = async () => {
+  async function doEncrypt() {
     try {
+      const secretB64 = Object.entries(secretsB64)[0][1]; // Picking up first secret loaded for encryption
       const name = "some file name";
       const secretRaw = ubuf(secretB64);
       const salt = randBytes(16);
@@ -252,8 +245,9 @@
     } catch (e) { log("❌ Encrypt error:", e.message); }
   };
 
-  $('#decrypt').onclick = async () => {
+  async function doDecrypt() {
     try {
+      const secretB64 = Object.entries(secretsB64)[0][1]; // Picking up first secret loaded for decryption
       const secretRaw = ubuf(secretB64);
       const data = new Uint8Array(ubuf($('#ct').value));
       const { salt, iv, name, bodyOffset } = parseHeader(data);
@@ -270,6 +264,8 @@
     } catch (e) { log("❌ Decrypt error:", e.message); }
   };
 
+  $('#decrypt').onclick = doDecrypt;
+  $('#encrypt').onclick = doEncrypt;
   $('#register').onclick = doRegister;
   $('#authenticate').onclick = doAuthenticate;
   $('#fake').onclick = doFake;
